--- a/angulartut14.html
+++ b/angulartut14.html
@@ -39,9 +39,29 @@
     Search : {{currSearch}} <br><br> -->
 
 
-    Current Time : {{time}} <br><br>
+    <!-- Current Time : {{time}} <br><br>
 
-  <!-- Start : 11:15 -->
+    <button ng-click="throwException()">Throw Exception</button> -->
+
+    <!-- <label>Message:</label>
+      <input type="text" ng-model="message">
+      <button ng-click="$log.log(message)">log</button>
+      <button ng-click="$log.warn(message)">warn</button>
+      <button ng-click="$log.info(message)">info</button>
+      <button ng-click="$log.error(message)">error</button>
+      <button ng-click="$log.debug(message)">debug</button>
+      <br><br> -->
+
+    <!-- <input type="text" ng-model="badStuff" />
+    <br><br>
+
+    <span>{{badStuff}}</span>
+    <span ng-bind-html="badStuff"></span>
+    <span ng-bind="badStuff"></span> -->
+
+    <p get-player-info></p>
+
+
 
   </div>
 
